# voltiq

./: .env.example  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: graph.py
anomaly/: detector.py
api/: main.py  schemas.py
api/middleware/: logging.py  metrics.py
api/routers/: agents.py  anomalies.py  forecast.py  health.py  ingest.py  router_agents.py  router_anomalies.py  router_ingest.py
core/: __init__.py  config.py  logging.py
data/: ingest.py
evaluation/: llm_eval.py
forecasting/models/: tft.py
infrastructure/docker/: Dockerfile.api
infrastructure/k8s/base/: api-deployment.yaml
mlflow_tracking/: tracker.py
monitoring/: prometheus.yml
pipelines/dags/: voltiq_pipeline.py
rag/: pipeline.py
tests/integration/: test_api.py
tests/unit/: test_core.py
