[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "voltiq"
version = "0.1.0"
description = "Intelligent Renewable Energy Grid Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["energy", "forecasting", "anomaly-detection", "rag", "agentic-ai", "mlops"]

dependencies = [
    # Deep learning
    "torch>=2.2.0",
    "pytorch-lightning>=2.2.0",
    "torchmetrics>=1.3.0",

    # LLM & agents
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "anthropic>=0.25.0",

    # Vector database
    "qdrant-client>=1.9.0",
    "fastembed>=0.2.0",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "entsoe-py>=0.6.0",
    "openmeteo-requests>=1.2.0",
    "requests-cache>=1.2.0",
    "retry-requests>=2.0.0",

    # MLflow
    "mlflow>=2.13.0",

    # Airflow (install separately in pipeline env)
    # "apache-airflow>=2.9.0",

    # LLM evaluation
    "deepeval>=0.21.0",
    "ragas>=0.1.7",

    # Observability
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers>=4.5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
voltiq = "scripts.cli:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = ["ANN101", "ANN102", "S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"
