[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "voltiq"
version = "0.1.0"
description = "Intelligent Renewable Energy Grid Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["energy", "forecasting", "anomaly-detection", "rag", "agentic-ai", "mlops"]

dependencies = [
    "torch>=2.2.0",
    "pytorch-lightning>=2.2.0",
    "torchmetrics>=1.3.0",
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-anthropic>=0.1.0",
    "langgraph>=0.1.0",
    "anthropic>=0.25.0",
    "qdrant-client>=1.9.0",
    "fastembed>=0.2.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pyarrow>=16.0.0",
    "entsoe-py>=0.6.0",
    "openmeteo-requests>=1.2.0",
    "requests-cache>=1.2.0",
    "retry-requests>=2.0.0",
    "mlflow>=2.13.0",
    "deepeval>=0.21.0",
    "ragas>=0.1.7",
    "prometheus-client>=0.20.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
    "tenacity>=8.3.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "testcontainers>=4.5.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
voltiq = "scripts.cli:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "notebooks*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT"]
ignore = [
    "S101",   # assert statements used in tests
    "ANN401", # Any return type — allowed where explicitly used
    "ANN201", # missing public function return annotation — too noisy for tasks/routes
    "ANN003", # missing **kwargs annotation — Airflow context pattern
    "ANN001", # missing arg annotation — fixtures, call_next
    "PT011",  # pytest.raises match= — broad ok for schema validation tests
    "B017",   # blind except in pytest.raises — acceptable for schema tests
    "S108",   # /tmp path — only used in eval helper, not prod code
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "N806", "B017", "PT011", "E741"]
"pipelines/dags/**" = ["ANN", "I001", "F401", "E501"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=. --cov-report=term-missing --cov-fail-under=70"